# rmasanitizer-artifact

./: .gitmodules  Dockerfile  README.md  artifact_identification.tex  build.sh  classification_quality.sh  copy_results_to_objectstorage.sh  overhead_results.sh  overhead_submit.sh  performance_evaluation_chameleon.sh  reproducibility_of_experiments.tex  reserve_chameleon_node.sh  start_openstack_image.sh
MUST-RMA/utility/: tsan_suppressions.txt
RMASanitizer/: CMakeLists.txt
RMASanitizer/cmakemodules/: FindOpenSHMEM.cmake  MustFeaturetests.cmake
RMASanitizer/modules/: CMakeLists.txt
RMASanitizer/modules/OneSidedChecks/: CMakeLists.txt  OneSidedChecksApi.h
RMASanitizer/modules/OneSidedChecks/AppThrAnn/: AppThrAnn.cpp  AppThrAnn.h  I_AppThrAnn.h  I_TSanSyncClockRecorder.h  TSanSyncClockRecorder.cpp  TSanSyncClockRecorder.h
RMASanitizer/modules/OneSidedChecks/RMAOp/: I_RMAOp.h  I_TargetRMAOp.h  OriginRMAOp.cpp  OriginRMAOp.h  RMAOp.cpp  RMAOp.h  TargetRMAOp.cpp  TargetRMAOp.h
RMASanitizer/modules/OneSidedChecks/RMASanitize/: I_RMASanitize.h  RMAMap.h  RMAMap.hpp  RMASanitize.cpp  RMASanitize.h  RMASanitizeTypes.h
RMASanitizer/modules/OneSidedChecks/RMAWrapper/: GASPIRMAWrapper.cpp  GASPIRMAWrapper.h  I_GASPIRMAWrapper.h  I_MPIRMAWrapper.h  I_SHMEMRMAWrapper.h  MPIRMAWrapper.cpp  MPIRMAWrapper.h  SHMEMRMAWrapper.cpp  SHMEMRMAWrapper.h
RMASanitizer/modules/OneSidedChecks/RaceChecks/TSan/: I_OriginChecks.h  I_TargetChecks.h  OriginChecks.cpp  OriginChecks.h  TargetChecks.cpp  TargetChecks.h
RMASanitizer/specifications/: gaspi_base_specification.xml  gaspi_specification.xml  gen_api_gaspi.h  gen_api_shmem.h  mk_argument_id_spec.sh  mk_initial_gaspi_specification.sh  mk_initial_shmem_specification.sh  mk_initial_specifications.sh  mpi_3_specification_rma.xml  mpi_specification.xml  must_base_specification.xml  must_onesided_checks.xml  must_onesided_checks_api.xml  must_resource_track.xml  must_resource_track_api.xml  must_tsan_messages.xml  must_vectorclock_wrapper.xml  request_condition_api.xml  shmem_base_specification.xml
RMASanitizer/tests/: CMakeLists.txt  lit.cfg  lit.site.cfg.in
RMASanitizer/utility/: CMakeLists.txt  mustrun2.sh  tsan_suppressions.txt
artifact-description/: artifact-description.tex  artifact_identification.tex  reproducibility_of_experiments.tex
chameleon/: Dockerfile  sandia_shmem.patch
chameleon/classic_flang_setup/: README.md  fortran_setup.sh  impi_install.sh
classification_quality/: Dockerfile  generate_results.sh  parse_results.sh
classification_quality/results-other-tools/: results.csv  results_parsed
classification_quality/results-rmasanitizer-gaspi/: results.csv  results_parsed
classification_quality/results-rmasanitizer-mpirma/: results.csv  results_parsed
classification_quality/results-rmasanitizer-shmem/: results.csv  results_parsed
classification_quality/rmaracebench/: .gitignore  Dockerfile  requirements.txt
classification_quality/summaries/: othertools_mpirma.summary  rmasanitizer_gaspi.summary  rmasanitizer_mpirma.summary  rmasanitizer_shmem.summary
evaluation/plots/: plot_performance_results.py
overhead_evaluation/chameleon/: Dockerfile  (+1 more)
plots/: plot_performance_results.py
(+5906 files in other folders)
